Pourquoi on compare

--- a/2013_06_26_groupmeeting.tex
+++ b/2013_06_26_groupmeeting.tex
@@ -344,4 +344,9 @@ G^{\prime}&\nearrow\\
 \end{tikzpicture}
 \end{frame}
 
+\begin{frame}{Motifs et fractures : longueurs d'onde}
+Dans les compositions où on a une loi de puissance à bas $\sigma$ (et donc des fractures) on observe des motifs. Inversement, si la loi est exponentielle (pas de fracture), on n'observe pas de motifs. Est-ce que les motifs sont les fractures à $\sigma=0$ ?
+
+Est-ce que $\lambda_f$ et $\lambda_m$ évoluent de la même façon en fonction des paramètres de contrôles : gap, courbure, composition du gel, G', temps de prise, etc. ?
+\end{frame}
 \end{document}
