Redire poids images motif

--- a/2013_06_26_groupmeeting.tex
+++ b/2013_06_26_groupmeeting.tex
@@ -366,12 +366,12 @@ G^{\prime}&\nearrow\\
 \end{tikzpicture}
 \column{0.4\textwidth}
 cas 2\% GDL 1\%\\
-\includegraphics[width=\textwidth]{motif_cas2_GDL1_zoom1.png}
+\includegraphics[width=\textwidth]{motif_cas2_GDL1_zoom1.jpg}
 
 \bigskip
 
 cas 2\% GDL 2\%\\
-\includegraphics[width=\textwidth]{motif_cas3_GDL2_zoom1.png}
+\includegraphics[width=\textwidth]{motif_cas3_GDL2_zoom1.jpg}
 \end{columns}
 
 \end{frame}
@@ -470,7 +470,7 @@ Motifs très reproductibles
 
 \column{0.5\textwidth}
 4\% 1\%\\
-\includegraphics[width=0.8\textwidth]{motif_cas4_GDL1.png}
+\includegraphics[width=0.8\textwidth]{motif_cas4_GDL1.jpg}
 \begin{itemize}
 \item Difficile d'obtenir des motifs à \SI{100}{\micro\metre}, 
 \item Pas de motif à plus petit gap.
