reduce fracture2_x10 remove navigation icons

--- a/2013_06_26_groupmeeting.tex
+++ b/2013_06_26_groupmeeting.tex
@@ -5,6 +5,7 @@
 %\usefonttheme[stillsansseriflarge, stillsansserifsmall]{structurebold}
 %\usefonttheme[onlymath]{serif}
 \useinnertheme{default}
+\setbeamertemplate{navigation symbols}{}
 
 \usepackage{fontspec}
 \usepackage{kpfonts}
